fix scrollbar

--- a/src/pages/panel/index.scss
+++ b/src/pages/panel/index.scss
@@ -98,3 +98,25 @@
     @apply bg-violet-400/30 dark:bg-violet-800/30;
   }
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+  cursor: default;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: tranparent; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background: #555;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #888; 
+}
